--- a/roulette.html
+++ b/roulette.html
@@ -31,7 +31,7 @@
 		100%{transform: rotate(2542.5deg);}
     }
     .second{
-    	animation: rotate 10s ease-out 1;
+    	animation: rotate 10s ease-in-out 1;
     	animation-fill-mode: both; 
     }
     @keyframes rotate
